# smart-card-reader-rust

./: .gitignore  Cargo.toml  README.md  build-all.sh
.claude/: settings.local.json
linux-pcsc-stub/: pcsclite_stub.c
smart-card-reader/: README.md
smart-card-reader/backend/: Cargo.toml  ENCRYPTION.md  config.toml
smart-card-reader/backend/certs/: README.md
smart-card-reader/backend/src/: audit_log.rs  config.rs  crypto.rs  decoder.rs  main.rs  rate_limiter.rs  reader.rs  server.rs  ui.rs  validation.rs
smart-card-reader/frontend/: index.html  package.json
smart-card-reader/frontend/src/: App.css  App.tsx  index.css  types.ts
smart-card-reader/frontend/src/components/: CardInfo.css  CardInfo.tsx
smart-card-reader/frontend/src/hooks/: useCardReader.ts
