[package]
name = "smart-card-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
pcsc = "2.8"
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8"
unicode-normalization = "0.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.21"
toml = "0.8"
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
chrono = { version = "0.4", features = ["serde"] }
# TLS/SSL support for secure WebSocket (wss://)
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
# PII Data Encryption (AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"
# Rate Limiting
parking_lot = "0.12"
# Input Validation
regex = "1.10"
